--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
   declared-services:
-    Investment-Portfolio:
+    po-Investment-Portfolio:
       label: fss-portfolio-service
       plan: fss-portfolio-service-free-plan
-    Portfolio-Optimization:
+    po-Portfolio-Optimization:
       label: fss-financial-optimization-service
       plan: fss-financial-optimization-service-free-plan
   applications:
@@ -13,6 +13,6 @@
     disk_quota: 512M
     domain: mybluemix.net
     services:
-    - Investment-Portfolio
-    - Portfolio-Optimization
+    - po-Investment-Portfolio
+    - po-Portfolio-Optimization
     buildpack: python_buildpack
